Add an email scope that returns the email address when token has `email` scope

--- a/config/locales/doorkeeper.en.yml
+++ b/config/locales/doorkeeper.en.yml
@@ -117,3 +117,4 @@ en:
       follow: follow, block, unblock and unfollow accounts
       read: read your account's data
       write: post on your behalf
+      email: access your email address
